Fix alignment of warnings on project_context

--- a/pillar-web/src/styles/_project.sass
+++ b/pillar-web/src/styles/_project.sass
@@ -420,6 +420,8 @@ $list-node-children-item-width: 160px
 		color: $color-text-dark-primary
 
 #project_context
+	position: relative
+
 	display: flex
 	flex-direction: column
 	flex: 1
